@@ -21,6 +21,10 @@ a LV2 instrument plugin.
 URI: http://synthv1.sourceforge.net/lv2
 .SH OPTIONS
 .HP
+\fB\-g\fR, \fB\-\-no\-gui\fR
+.IP
+Disable the graphical user interface (GUI)
+.HP
 \fB\-h\fR, \fB\-\-help\fR
 .IP
 Show help about command line options
